--- a/electronic.html
+++ b/electronic.html
@@ -9,6 +9,45 @@
 <body>
 <div class="mainheader">
 <header>
+	<nav>
+		<div id="mySidenav" class="sidenav">
+		  <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
+		  <pre>
+		  <a href="#">ALL</a>
+		  <a href="electronic.html" target="_blank">ELECTRONICS</a>
+		  <a href="mens.html" target="_blank">MENS</a>
+		  <a href="women.html" target="_blank">WOMEN</a>
+		  <a href="kids.html" target="_blank">KIDS</a>
+		  <a href="furniture.html" target="_blank">FURNITURE</a>
+		  <a href="shoes.html" target="_blank">SHOES</a>
+		  <a href="#aboutus">ABOUT US</a>
+		  <a href="#aboutus">HELP</a>
+		  <a href="login.html" target="_blank">LOGIN</a>
+		  <a href="#contactus">CONTACT US</a>
+		  </pre>
+		</div>
+		<span class="hamburger" onclick="openNav()">&#9776;</span>
+		
+		<div class="logo"><img src="img/logo(3).jpg" alt=""></div>
+		<div><select id="all">
+			<option>ALL</option>
+			<option>Mens</option>
+			<option>Womens</option>
+			<option>Kids</option>
+			<option>Electronics</option>
+			<option>Shoes</option>
+			<option>Essentials</option>
+			<option>Mobiles</option>
+		</select>
+		<input type="text" id="search" placeholder="      Search for Products, Brands and more..">
+		<button id="searchicon" onclick="searchcat()" ><i class="fa fa-search fa-2x"></i></button>
+		</div>
+		<button class="login" ><a href="login.html" target="_blank">Login</a></button>
+		<button class="orders" >Orders</button>
+		<button class="contactus" ><a href="tel:6388392311">Contact Us</a></button>
+		<a href="cart.html" target="_blank" id="shoppingcart"><i class="fa fa-shopping-cart fa-3x"></i></a>
+		
+	</nav>
 	<div class="div1">
 		<section class="div1sec1"><div><img src="img/item1.png"><h5 id="offer">Up To 50% off</h5></div></section>
 		<section class="div1sec2"><div><img src="img/item2.png"><h5 id="offer">Up To 20% off</h5></div></section>
@@ -27,7 +66,7 @@
 		<section class="div3sec2"><div><img src="img/item10.png"><h5 id="offer">Up To 40% off</h5></div></section>
 		<section class="div3sec3"><div><img src="img/item11.png"><h5 id="offer">Shop Now!</h5></div></section>
 		<section class="div3sec4"><div><img src="img/item12.png"><h5 id="offer">Price Dropped!</h5></div></section>
-	</div>img/
+	</div>
 	<div class="div4">
 		<section class="div4sec1"><div><img src="img/item13.png"><h5 id="offer">Best Deal!</h5></div></section>
 		<section class="div4sec2"><div><img src="img/item14.png"><h5 id="offer">Best Deal!</h5></div></section>
@@ -113,7 +152,7 @@
                 </div>
             </section>
             <section class="footerfour">
-                <h3>CONNECT WITH US</h3>
+                <h3 id="aboutus">CONNECT WITH US</h3>
                 <div class="logos">
                     <div class="logos2">
                         <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
