--- a/kids.html
+++ b/kids.html
@@ -2,11 +2,50 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>E-Commerce</title>
+	<title>Kids</title>
     <link rel="stylesheet" type="text/css" href="Css/kids.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <nav>
+        <div id="mySidenav" class="sidenav">
+          <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
+          <pre>
+          <a href="#">ALL</a>
+          <a href="electronic.html" target="_blank">ELECTRONICS</a>
+          <a href="mens.html" target="_blank">MENS</a>
+          <a href="women.html" target="_blank">WOMEN</a>
+          <a href="kids.html" target="_blank">KIDS</a>
+          <a href="furniture.html" target="_blank">FURNITURE</a>
+          <a href="shoes.html" target="_blank">SHOES</a>
+          <a href="#aboutus">ABOUT US</a>
+          <a href="#aboutus">HELP</a>
+          <a href="login.html" target="_blank">LOGIN</a>
+          <a href="#contactus">CONTACT US</a>
+          </pre>
+        </div>
+        <span class="hamburger" onclick="openNav()">&#9776;</span>
+        
+        <div class="logo"><img src="img/logo(3).jpg" alt=""></div>
+        <div><select id="all">
+            <option>ALL</option>
+            <option>Mens</option>
+            <option>Womens</option>
+            <option>Kids</option>
+            <option>Electronics</option>
+            <option>Shoes</option>
+            <option>Essentials</option>
+            <option>Mobiles</option>
+        </select>
+        <input type="text" id="search" placeholder="      Search for Products, Brands and more..">
+        <button id="searchicon" onclick="searchcat()" ><i class="fa fa-search fa-2x"></i></button>
+        </div>
+        <button class="login" ><a href="login.html" target="_blank">Login</a></button>
+        <button class="orders" >Orders</button>
+        <button class="contactus" ><a href="tel:6388392311">Contact Us</a></button>
+        <a href="cart.html" target="_blank" id="shoppingcart"><i class="fa fa-shopping-cart fa-3x"></i></a>
+        
+        </nav>
     <main>
         <div class="div1">
             <section class="div1sec1"><div><img src="img/kitem1.png"><h5 id="colortext">Tripr</h5><h5 id="offer">Rs 499</h5></div></section>
@@ -99,7 +138,7 @@
                 </div>
             </section>
             <section class="footerthree">
-                <h3>LET US HELP YOU</h3>
+                <h3 id="aboutus">LET US HELP YOU</h3>
                 <div class="three">
                     <div>Your Account</div>
                     <div>Return centre</div>
