--- a/women.html
+++ b/women.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Woman</title>
-    <link rel="stylesheet" type="text/css" href="Css/woman.css">
+	<title>Women</title>
+    <link rel="stylesheet" type="text/css" href="Css/women.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
