modified overflow content in all

--- a/cart.html
+++ b/cart.html
@@ -216,7 +216,7 @@
     <footer>
         <div class="footer">
             <section class="footerone">
-                <h3 id="aboutus">GET TO KNOW US</h3>
+                <h5 id="aboutus">GET TO KNOW US</h5>
                 <div class="one">
                     <div>ABOUT US</div>
                     <div>CAREERS</div>
@@ -228,7 +228,7 @@
                 </div>
             </section>
             <section class="footertwo">
-                <h3 id="aboutus">MAKE MONEY WITH US</h3>
+                <h5 id="aboutus">EARN WITH US</h5>
                 <div class="two">
                     <div class="items">
                         <div>SELL ON BOMIRANG</div>
@@ -241,7 +241,7 @@
                 </div>
             </section>
             <section class="footerthree">
-                <h3 id="aboutus">LET US HELP YOU</h3>
+                <h5 id="aboutus">LET US HELP YOU</h5>
                 <div class="three">
                     <div>Your Account</div>
                     <div>Return centre</div>
@@ -253,7 +253,7 @@
                 </div>
             </section>
             <section class="footerfour">
-                <h3 id="contactus" id="aboutus">CONNECT WITH US</h3>
+                <h5 id="contactus" id="aboutus">CONNECT WITH US</h5>
                 <div class="logos">
                     <div class="logos2">
                         <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
