--- a/electronic.html
+++ b/electronic.html
@@ -127,7 +127,7 @@
                 </div>
             </section>
             <section class="footertwo">
-                <h3>MAKE MONEY WITH US</h3>
+                <h3>EARN WITH US</h3>
                 <div class="two">
                     <div class="items">
                         <div>SELL ON BOMIRANG</div>
