--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </section>
                 <section class="secfour">
                     <h2>UPTO 20% OFF |Deepawali Special</h2>
-                    <div sectwoimg><img src="img/kitem6.png" alt="36" width="240" height="240"></div>
+                    <div sectwoimg><img src="img/kitem6.png" alt="36" width="240" height="240" style="padding-right: 40px;"></div>
                     <a href="kids.html">See more..</a>
                 </section>
             </div>
@@ -245,7 +245,7 @@
                 </div>
             </section>
             <section class="footertwo">
-                <h3>MAKE MONEY WITH US</h3>
+                <h3>EARN WITH US</h3>
                 <div class="two">
                     <div class="items">
                         <div>SELL ON BOMIRANG</div>
