--- a/mens.html
+++ b/mens.html
@@ -125,7 +125,7 @@
                 </div>
             </section>
             <section class="footertwo">
-                <h3>MAKE MONEY WITH US</h3>
+                <h3>Earn WITH US</h3>
                 <div class="two">
                     <div class="items">
                         <div>SELL ON BOMIRANG</div>
