--- a/cart.html
+++ b/cart.html
@@ -47,14 +47,13 @@
         <button class="orders" >Orders</button>
         <button class="contactus" ><a href="tel:6388392311">Contact Us</a></button>
         <a href="cart.html" target="_blank" id="shoppingcart"><i class="fa fa-shopping-cart fa-3x"></i></a>
-        
       </nav>
     </header>
     <div class="mcontent">
       <div class="clm">
         <h2>CART ITEMS</h2>
         <section class="cartone">
-          <div class="leftsec"><img src="img/item1.png" width="280" height="300"></div>
+          <div class="leftsec" id="add"><img src="img/item1.png" width="280" height="300"></div>
           <div class="rightsec">
             <div class="prdetail">
               <h3> Prestige coffee maker</h3>
@@ -62,7 +61,7 @@
               <p class="color">Discount: 50%</p>
               <p class="color">Bomirang verified</p>
               <p class="delete"><i class="fa fa-trash"> Remove item</i></p>
-              <p class="delete"><i class="fa fa-heart">Add to wishlist</i></p>
+              <p class="delete"><i class="fa fa-heart" style="color: red;"></i>Add to wishlist</p>
             </div>
             <div class="prquantity">
               <ul class="unordered">
@@ -85,7 +84,7 @@
               <p class="color">Discount: 30%</p>
               <p class="color">Bomirang verified</p>
               <p class="delete"><i class="fa fa-trash"> Remove item</i></p>
-              <p class="delete"><i class="fa fa-heart">Add to wishlist</i></p>
+              <p class="delete"><i class="fa fa-heart" style="color: red;"></i>Add to wishlist</p>
             </div>
             <div class="prquantity">
               <ul class="unordered">
@@ -108,7 +107,7 @@
               <p class="color">Discount: 10%</p>
               <p class="color">Bomirang verified</p>
               <p class="delete"><i class="fa fa-trash"> Remove item</i></p>
-              <p class="delete"><i class="fa fa-heart">Add to wishlist</i></p>
+              <p class="delete"><i class="fa fa-heart" style="color: red;"></i>Add to wishlist</p>
             </div>
             <div class="prquantity">
               <ul class="unordered">
@@ -131,7 +130,7 @@
               <p class="color">Discount: 50%</p>
               <p class="color">Bomirang verified</p>
               <p class="delete"><i class="fa fa-trash"> Remove item</i></p>
-              <p class="delete"><i class="fa fa-heart">Add to wishlist</i></p>
+              <p class="delete"><i class="fa fa-heart"style="color: red;"></i>Add to wishlist</p>
             </div>
             <div class="prquantity">
               <ul class="unordered">
@@ -154,7 +153,7 @@
               <p class="color">Discount: 30%</p>
               <p class="color">Bomirang verified</p>
               <p class="delete"><i class="fa fa-trash"> Remove item</i></p>
-              <p class="delete"><i class="fa fa-heart">Add to wishlist</i></p>
+              <p class="delete"><i class="fa fa-heart" style="color: red;"></i>Add to wishlist</p>
             </div>
             <div class="prquantity">
               <ul class="unordered">
@@ -177,7 +176,7 @@
               <p class="color">Discount: 60%</p>
               <p class="color">Bomirang verified</p>
               <p class="delete"><i class="fa fa-trash"> Remove item</i></p>
-              <p class="delete"><i class="fa fa-heart">Add to wishlist</i></p>
+              <p class="delete"><i class="fa fa-heart" style="color: red;"></i>Add to wishlist</p>
             </div>
             <div class="prquantity">
               <ul class="unordered">
